--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,11 @@
 build:
   docker:
-    web: Dockerfile
+    web: rtmp/Dockerfile
+
+build:
+  docker:
+    web: auth/Dockerfile
+    
+run:
+  web: bundle exec puma -C config/puma.rb
+
